--- a/files/Makefile.am
+++ b/files/Makefile.am
@@ -1,6 +1,8 @@
 AM_CPPFLAGS = -I$(srcdir)/.. -I$(srcdir)/../headers $(SDL_CFLAGS) $(INCDIRS) $(WINDOWING_SYSTEM) \
 		$(DEBUG_FLAGS) $(CPPFLAGS) -DEXULT_DATADIR=\"$(EXULT_DATADIR)\"
 
+
+
 SUBDIRS = sha1 zip
 
 noinst_LTLIBRARIES = libu7file.la
@@ -14,6 +16,13 @@ rwregress_SOURCES = \
 rwregress_LDADD = \
 	libu7file.la \
 	$(SYSLIBS)
+
+if !HAVE_FILESYSTEM
+FS_IMPL = filesystem.cc
+else
+FS_IMPL =
+endif
+
 
 libu7file_la_SOURCES =	\
 	Flat.cc		\
@@ -30,7 +39,7 @@ libu7file_la_SOURCES =	\
 	U7fileman.h	\
 	U7obj.cc	\
 	U7obj.h	\
-	filesystem.cc \
+	$(FS_IMPL) \
 	filesystem.h \
 	utils.cc	\
 	utils.h		\
