Fix error related to stdc++fs detection

--- a/configure.ac
+++ b/configure.ac
@@ -265,9 +265,11 @@ AC_TRY_COMPILE([
 ],
 	ac_cv_link_fs_stdlib=no,
 	ac_cv_link_fs_stdlib=yes)
-	AC_MSG_RESULT($ac_cv_fs_stdlib)
-if [ test "x$ac_cv_fs_stdlib" = xyes ]; then
+if test "x$ac_cv_fs_stdlib" = xyes -a "x$ac_cv_class_fs_path" = xyes; then
+	AC_MSG_RESULT(yes)
 	SYSLIBS="$SYSLIBS -lstdc++fs"
+else
+	AC_MSG_RESULT(no)
 fi
 
 
