WIP: migrate to CMake. Audio builds fine.
Libvorbis has hardcoded path, SDL2 is pulled using find_library.
To be handled using conan or some other means of scripting.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,17 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_VERBOSE_MAKEFILE OFF)
 
+#TODO use Conan to pull-in SDL
+find_package(SDL2 REQUIRED)
+include_directories(${SDL2_INCLUDE_DIRS})
+
+#TODO same with vorbis -> Conan
+#find_package(libvorbis REQUIRED)
+include_directories(/usr/local/include)
+
+
 add_compile_definitions(EXULT_DATADIR="/Library/Application\ Support/Exult/data")
 
 
-include_directories(.)
-include_directories(headers)
 add_subdirectory(files)
+add_subdirectory(Audio)
