WIP: CMake: add imagewin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.5)
 
 project(Exult LANGUAGES CXX)
+add_compile_definitions(VERSION="1.7.0git")
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -22,3 +23,6 @@ add_subdirectory(files)
 add_subdirectory(Audio)
 add_subdirectory(conf)
 add_subdirectory(flic)
+add_subdirectory(gamemgr)
+add_subdirectory(gumps)
+add_subdirectory(imagewin)
