WIP: CMake: add libshapes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,3 +26,5 @@ add_subdirectory(flic)
 add_subdirectory(gamemgr)
 add_subdirectory(gumps)
 add_subdirectory(imagewin)
+#add_subdirectory(mapedit)
+add_subdirectory(shapes)
