--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,4 @@ add_subdirectory(gumps)
 add_subdirectory(imagewin)
 #add_subdirectory(mapedit)
 add_subdirectory(shapes)
+add_subdirectory(server)
