--- a/files/sha1/CMakeLists.txt
+++ b/files/sha1/CMakeLists.txt
@@ -2,9 +2,9 @@ cmake_minimum_required(VERSION 3.5)
 
 
 include_directories(.)
-set(libsha1_SOURCES
+set(sha1_SOURCES
 	sha1.cpp
 	sha1.h
 )
 
-add_library(libsha1 OBJECT ${libsha1_SOURCES})
+add_library(sha1 OBJECT ${sha1_SOURCES})
