--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ add_compile_definitions(EXULT_DATADIR="/Library/Application\ Support/Exult/data"
 
 
 add_subdirectory(files)
-add_subdirectory(Audio)
+add_subdirectory(audio)
 add_subdirectory(conf)
 add_subdirectory(flic)
 add_subdirectory(gamemgr)
